--- a/src/styles/overlay.css
+++ b/src/styles/overlay.css
@@ -36,7 +36,7 @@
     /* border: 1px solid black; */
 }
 
-#toggle-bilingual {
+#toggle-bilingual, #read-article-button {
     padding: 10px 20px;
     font-size: 16px;
     color: white;
@@ -60,11 +60,23 @@
     right: 10px;
     width: 1.6em;
     height: 1.6em;
-    border-radius: 0.8em;
     font-size: 1em;
     cursor: pointer;
     /* border: 1px solid gray; */
 }
+
+p.origin {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  
+  .speaker-icon {
+    cursor: pointer;
+    margin-left: 10px;
+    flex-shrink: 0;
+  }
+  
 
 /* 
 #controls-section {
