--- a/src/styles/reader.css
+++ b/src/styles/reader.css
@@ -1,7 +1,8 @@
 #reader-wrap {
     display: flex;
     width: 100%;
-    height: 100vh;
+    height: 90vh;
+    overflow-y: scroll;
 }
 
 #main-article {
