--- a/src/styles/reader.css
+++ b/src/styles/reader.css
@@ -35,3 +35,19 @@
     /* margin-left: 10px; */
     /* flex-shrink: 0; */
 }
+
+/* Override the default border-bottom width for tbody tr */
+#reader-wrap .prose :where(tbody tr):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
+    border-bottom-width: 0px !important; 
+    border-bottom-color: var(--tw-prose-td-borders);
+}
+
+#reader-wrap .prose-lg :where(tbody td, tfoot td):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
+    padding-top: 0.3em;
+    padding-bottom: 0.3em;
+}
+
+#reader-wrap .prose-lg :where(p):not(:where([class~="not-prose"], [class~="not-prose"] *)) {
+    margin-top: 0.3em;
+    margin-bottom: 0.3em;
+}
