update download link

--- a/templates/install.html
+++ b/templates/install.html
@@ -9,7 +9,8 @@
             <li>Click "Add to Chrome" to install the extension.</li>
             <li>Follow the on-screen instructions to complete the installation.</li>
         </ol>
-        <a href="https://chrome.google.com/webstore" class="btn bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mt-4">Add to Chrome</a>
+        <br>
+        <a href="{{extension_url}}" target="_blank" class="mt-4 btn bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mt-4">Add to Chrome</a>
     </div>
 </section>
 {% endblock %}
