--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
     <div class="container">
         <h2>Enhance Your English Reading Experience</h2>
         <p>With Text-to-Speech, Bilingual Mode, and Dictionary</p>
-        <a href="/install" class="btn">Add to Chrome</a>
+        <a href="{{extension_url}}" target="_blank" class="btn">Add to Chrome</a>
     </div>
 </section>
 
