fix user context;

--- a/src/styles/overlay.css
+++ b/src/styles/overlay.css
@@ -1,14 +1,14 @@
 plasmo-csui{
     display: none;
 }
-#reader-overlay {
+#english-reader-overlay {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     background: rgba(255, 255, 255, 0.95);
-    z-index: 9999;
+    z-index: 999999;
     display: flex;
     justify-content: space-between;
     padding: 10px;
