--- a/templates/home.html
+++ b/templates/home.html
@@ -5,8 +5,9 @@
     <div class="container">
         <h2>Enhance Your English Reading Experience</h2>
         <p>With Text-to-Speech, Bilingual Mode, and Dictionary</p>
-        <a href="{{extension_url}}" target="_blank" class="btn">Add to Chrome</a>
-    </div>
+        <a href="{{extension_url}}" target="_blank" class="mt-4 btn bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mt-4">Add to Chrome</a>
+        <a href="{{ url_for('static', filename='english-reader.zip') }}" target="_blank" class="mt-4 btn bg-gray-600 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded mt-4">Download (& Install Manually)</a>
+</div>
 </section>
 
 <section class="screenshots">
