put translation in background; use single paragraph translate instead of bilingual mode; doudle click to deselect highlight word

--- a/src/styles/reader.css
+++ b/src/styles/reader.css
@@ -30,7 +30,7 @@
     cursor: pointer;
 }
 
-.speaker-icon {
+.speaker-icon, .translate-icon {
     cursor: pointer;
     /* margin-left: 10px; */
     /* flex-shrink: 0; */
