--- a/templates/install.html
+++ b/templates/install.html
@@ -33,7 +33,7 @@
         <br>
         <div class="flex">
             <a href="{{extension_url}}" target="_blank" class="mt-4 btn bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mt-4">Add to Chrome</a>
-            <a href="{{ url_for('static', filename='english-reader.zip') }}" target="_blank" class="mt-4 btn bg-gray-600 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded mt-4">Download (& Install Manually)</a>
+            <a href="{{ url_for('static', filename='english-reader.zip') }}?v={{ current_time | urlencode }}" target="_blank" class="mt-4 btn bg-gray-600 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded mt-4">Download (& Install Manually)</a>
         </div>
     </div>
 </section>
