add premium page

--- a/templates/header.html
+++ b/templates/header.html
@@ -9,6 +9,7 @@
             <ul>
                 <li><a href="{{ url_for('home') }}">Home</a></li>
                 <li><a href="{{ url_for('features') }}">Features</a></li>
+                <li><a href="{{ url_for('premium') }}">Premium</a></li>
                 <li><a href="{{ url_for('install') }}">Install</a></li>
                 <li><a href="{{ url_for('faq') }}">FAQ</a></li>
                 <li><a href="{{ url_for('contact') }}">Contact</a></li>
